--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:recyclerview-v7:24.2.1'
     compile 'com.google.android.gms:play-services:9.6.1'
+    compile 'com.android.support:cardview-v7:21.0.+'
     testCompile 'junit:junit:4.12'
 }
